--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bitcoinjs-lib": "^5.1.10",
+    "bluebird": "^3.7.2",
     "cookie-parser": "~1.4.4",
+    "crypto-balances": "^2.1.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.27.0",
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.20",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "node-twitter-api": "^1.8.0",
+    "pug": "2.0.0-beta11",
+    "twitter": "^1.7.1",
+    "twitter-lite": "^0.14.0"
   }
 }
